objects/Royalty_Table_Headings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Defines different header names for different Royalty types selected on quote of IP-Tensilica type.</description>
    <fields>
        <fullName>Option_Royalty_Type__c</fullName>
        <description>Should be exactly same as defined in the Royalty Type pick list of quote.</description>
        <label>Option Royalty Type</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Text_Core_Type__c</fullName>
        <label>Text Core Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Text_RateOrFee__c</fullName>
        <label>Text RateOrFee</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Text_Shipment_Criteria__c</fullName>
        <label>Text Shipment Criteria</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Royalty Table Headings</label>
</CustomObject>